Update nav by adding icons. Spacing fixes.

--- a/responsive-news-site/webroot/css/defaults.css
+++ b/responsive-news-site/webroot/css/defaults.css
@@ -33,8 +33,11 @@ figure {
 }
 
 body > [type="checkbox"] {
-  position: absolute;
-  top: 3.5rem;
-  left: .5rem;
+  display: none;
 }
 
+nav > ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
